@@ -2570,6 +2570,9 @@ ifloat128: 3
 ildouble: 5
 ldouble: 5
 
+Function: "sin_vlen2":
+double: 2
+
 Function: "sincos":
 double: 1
 float: 1
